--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>RAMA MASTER</h1>
+    <a href="/contacto.hml">Contacto</a>
     <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam veniam natus perferendis. Vero facilis magni tempora voluptatum libero quas, et recusandae architecto! Vero consequatur ex laboriosam deserunt ipsam blanditiis sit.</P>
 </body>
 </html>
